# Point_Cloud_RGB_colorising

./: .gitignore  CMakeLists.txt  README.md  package.xml
Docker/: Dockerfile  run_dev.sh
configs/: calibration.yaml  config.yaml  rosconsole.config  vis.py  vis.rviz
include/: colorise.h  utils.h
launch/: ColoriseMap.launch  ColoriseScan.launch  run.launch
src/: ColoriseMap.cc  ColoriseScan.cc  test_point_cloud_projection.cc  utils.cc  utils.h
