<?xml version="1.0"?>
<package format="2">
  <name>point_cloud_projection</name>
  <version>0.0.0</version>
  <description>The point_cloud_projection package</description>

  <maintainer email="Z.Zhong@lboro.ac.uk">root</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
